--- a/cmy_bldc_RB.ioc
+++ b/cmy_bldc_RB.ioc
@@ -1,32 +1,44 @@
 #MicroXplorer Configuration settings - do not modify
+ADC1.Channel-8\#ChannelRegularConversion=ADC_CHANNEL_11
+ADC1.IPParameters=Rank-8\#ChannelRegularConversion,Channel-8\#ChannelRegularConversion,SamplingTime-8\#ChannelRegularConversion,NbrOfConversionFlag,master
+ADC1.NbrOfConversionFlag=1
+ADC1.Rank-8\#ChannelRegularConversion=1
+ADC1.SamplingTime-8\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.master=1
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F1
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
-Mcu.IP2=SYS
-Mcu.IP3=TIM1
-Mcu.IP4=TIM3
-Mcu.IPNb=5
-Mcu.Name=STM32F103C(8-B)Tx
-Mcu.Package=LQFP48
-Mcu.Pin0=PD0-OSC_IN
-Mcu.Pin1=PD1-OSC_OUT
-Mcu.Pin10=PA10
-Mcu.Pin11=PA13
-Mcu.Pin12=PA14
-Mcu.Pin13=VP_SYS_VS_Systick
-Mcu.Pin2=PA6
-Mcu.Pin3=PA7
-Mcu.Pin4=PB0
-Mcu.Pin5=PB13
-Mcu.Pin6=PB14
-Mcu.Pin7=PB15
-Mcu.Pin8=PA8
-Mcu.Pin9=PA9
-Mcu.PinsNb=14
+Mcu.IP0=ADC1
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=SYS
+Mcu.IP4=TIM1
+Mcu.IP5=TIM3
+Mcu.IP6=USART2
+Mcu.IPNb=7
+Mcu.Name=STM32F103R(8-B)Tx
+Mcu.Package=LQFP64
+Mcu.Pin0=PC13-TAMPER-RTC
+Mcu.Pin1=PD0-OSC_IN
+Mcu.Pin10=PB14
+Mcu.Pin11=PB15
+Mcu.Pin12=PA8
+Mcu.Pin13=PA9
+Mcu.Pin14=PA10
+Mcu.Pin15=PA13
+Mcu.Pin16=PA14
+Mcu.Pin17=VP_SYS_VS_Systick
+Mcu.Pin2=PD1-OSC_OUT
+Mcu.Pin3=PC1
+Mcu.Pin4=PA2
+Mcu.Pin5=PA3
+Mcu.Pin6=PA6
+Mcu.Pin7=PA7
+Mcu.Pin8=PB0
+Mcu.Pin9=PB13
+Mcu.PinsNb=18
 Mcu.UserConstants=
-Mcu.UserName=STM32F103C8Tx
+Mcu.UserName=STM32F103RBTx
 MxCube.Version=4.23.0
 MxDb.Version=DB.4.0.230
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false
@@ -45,6 +57,10 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA2.Mode=Asynchronous
+PA2.Signal=USART2_TX
+PA3.Mode=Asynchronous
+PA3.Signal=USART2_RX
 PA6.Signal=S_TIM3_CH1
 PA7.Signal=S_TIM3_CH2
 PA8.Signal=S_TIM1_CH1
@@ -56,10 +72,16 @@ PB14.Mode=PWM Generation2 CH2 CH2N
 PB14.Signal=TIM1_CH2N
 PB15.Mode=PWM Generation3 CH3 CH3N
 PB15.Signal=TIM1_CH3N
+PC1.Signal=ADCx_IN11
+PC13-TAMPER-RTC.GPIOParameters=PinState,GPIO_Label
+PC13-TAMPER-RTC.GPIO_Label=BOARD_LED
+PC13-TAMPER-RTC.Locked=true
+PC13-TAMPER-RTC.PinState=GPIO_PIN_SET
+PC13-TAMPER-RTC.Signal=GPIO_Output
 PCC.Checker=false
 PCC.Line=STM32F103
-PCC.MCU=STM32F103C(8-B)Tx
-PCC.PartNumber=STM32F103C8Tx
+PCC.MCU=STM32F103R(8-B)Tx
+PCC.PartNumber=STM32F103RBTx
 PCC.Seq0=0
 PCC.Series=STM32F1
 PCC.Temperature=25
@@ -77,7 +99,7 @@ ProjectManager.CoupleFile=true
 ProjectManager.CustomerFirmwarePackage=C\:/Users/cmy/STM32Cube/Repository/STM32Cube_FW_F1_V1.6.1
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
-ProjectManager.DeviceId=STM32F103C8Tx
+ProjectManager.DeviceId=STM32F103RBTx
 ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.6.1
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
@@ -93,8 +115,9 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-SystemClock_Config-RCC-false-HAL,3-MX_TIM1_Init-TIM1-false-HAL,4-MX_TIM3_Init-TIM3-false-HAL
-RCC.ADCFreqValue=36000000
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-SystemClock_Config-RCC-false-HAL,3-MX_ADC1_Init-ADC1-false-HAL,4-MX_TIM3_Init-TIM3-false-HAL,5-MX_TIM1_Init-TIM1-false-HAL,6-MX_USART2_UART_Init-USART2-false-HAL
+RCC.ADCFreqValue=12000000
+RCC.ADCPresc=RCC_ADCPCLK2_DIV6
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
 RCC.APB1Freq_Value=36000000
@@ -104,7 +127,7 @@ RCC.APB2TimFreq_Value=72000000
 RCC.FCLKCortexFreq_Value=72000000
 RCC.FamilyName=M
 RCC.HCLKFreq_Value=72000000
-RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
+RCC.IPParameters=ADCFreqValue,ADCPresc,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
 RCC.MCOFreq_Value=72000000
 RCC.PLLCLKFreq_Value=72000000
 RCC.PLLMCOFreq_Value=36000000
@@ -115,6 +138,8 @@ RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=72000000
 RCC.USBFreq_Value=72000000
 RCC.VCOOutput2Freq_Value=8000000
+SH.ADCx_IN11.0=ADC1_IN11,IN11
+SH.ADCx_IN11.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1 CH1N
 SH.S_TIM1_CH1.ConfNb=1
 SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2 CH2N
@@ -132,7 +157,7 @@ TIM1.Channel-PWM\ Generation2\ CH2\ CH2N=TIM_CHANNEL_2
 TIM1.Channel-PWM\ Generation3\ CH3\ CH3N=TIM_CHANNEL_3
 TIM1.CounterMode=TIM_COUNTERMODE_CENTERALIGNED1
 TIM1.DeadTime=50
-TIM1.IPParameters=Channel-PWM Generation1 CH1 CH1N,Channel-PWM Generation2 CH2 CH2N,Channel-PWM Generation3 CH3 CH3N,CounterMode,Period,Prescaler,DeadTime,Pulse-PWM Generation1 CH1 CH1N,Pulse-PWM Generation2 CH2 CH2N,Pulse-PWM Generation3 CH3 CH3N
+TIM1.IPParameters=Channel-PWM Generation1 CH1 CH1N,Channel-PWM Generation2 CH2 CH2N,Channel-PWM Generation3 CH3 CH3N,Prescaler,CounterMode,Period,DeadTime,Pulse-PWM Generation1 CH1 CH1N,Pulse-PWM Generation2 CH2 CH2N,Pulse-PWM Generation3 CH3 CH3N
 TIM1.Period=500
 TIM1.Prescaler=71
 TIM1.Pulse-PWM\ Generation1\ CH1\ CH1N=100
@@ -142,6 +167,8 @@ TIM3.Commutation_Delay=1
 TIM3.IC1Filter=1
 TIM3.IPParameters=Period,IC1Filter,Commutation_Delay
 TIM3.Period=65535
+USART2.IPParameters=VirtualMode
+USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=cmy_bldc
