--- a/cmy_bldc.ioc
+++ b/cmy_bldc.ioc
@@ -6,25 +6,30 @@ Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
 Mcu.IP3=TIM1
-Mcu.IP4=TIM3
-Mcu.IPNb=5
+Mcu.IP4=TIM2
+Mcu.IP5=TIM3
+Mcu.IPNb=6
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PD0-OSC_IN
 Mcu.Pin1=PD1-OSC_OUT
-Mcu.Pin10=PA10
-Mcu.Pin11=PA13
-Mcu.Pin12=PA14
-Mcu.Pin13=VP_SYS_VS_Systick
+Mcu.Pin10=PA9
+Mcu.Pin11=PA10
+Mcu.Pin12=PA13
+Mcu.Pin13=PA14
+Mcu.Pin14=PB6
+Mcu.Pin15=PB7
+Mcu.Pin16=VP_SYS_VS_Systick
+Mcu.Pin17=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin2=PA6
 Mcu.Pin3=PA7
 Mcu.Pin4=PB0
-Mcu.Pin5=PB13
-Mcu.Pin6=PB14
-Mcu.Pin7=PB15
-Mcu.Pin8=PA8
-Mcu.Pin9=PA9
-Mcu.PinsNb=14
+Mcu.Pin5=PB2
+Mcu.Pin6=PB13
+Mcu.Pin7=PB14
+Mcu.Pin8=PB15
+Mcu.Pin9=PA8
+Mcu.PinsNb=18
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
 MxCube.Version=4.23.0
@@ -38,6 +43,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false
 PA10.Signal=S_TIM1_CH3
@@ -56,6 +62,15 @@ PB14.Mode=PWM Generation2 CH2 CH2N
 PB14.Signal=TIM1_CH2N
 PB15.Mode=PWM Generation3 CH3 CH3N
 PB15.Signal=TIM1_CH3N
+PB2.GPIOParameters=PinState,GPIO_Label
+PB2.GPIO_Label=LED
+PB2.Locked=true
+PB2.PinState=GPIO_PIN_SET
+PB2.Signal=GPIO_Output
+PB6.Locked=true
+PB6.Signal=GPIO_Input
+PB7.Locked=true
+PB7.Signal=GPIO_Input
 PCC.Checker=false
 PCC.Line=STM32F103
 PCC.MCU=STM32F103C(8-B)Tx
@@ -93,7 +108,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-SystemClock_Config-RCC-false-HAL,3-MX_TIM1_Init-TIM1-false-HAL,4-MX_TIM3_Init-TIM3-false-HAL
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-SystemClock_Config-RCC-false-HAL,3-MX_TIM1_Init-TIM1-false-HAL,4-MX_TIM3_Init-TIM3-false-HAL,5-MX_TIM2_Init-TIM2-false-HAL
 RCC.ADCFreqValue=36000000
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -138,10 +153,15 @@ TIM1.Prescaler=71
 TIM1.Pulse-PWM\ Generation1\ CH1\ CH1N=100
 TIM1.Pulse-PWM\ Generation2\ CH2\ CH2N=200
 TIM1.Pulse-PWM\ Generation3\ CH3\ CH3N=300
+TIM2.IPParameters=Prescaler,Period
+TIM2.Period=50000
+TIM2.Prescaler=71
 TIM3.Commutation_Delay=1
 TIM3.IC1Filter=1
 TIM3.IPParameters=Period,IC1Filter,Commutation_Delay
 TIM3.Period=65535
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 board=cmy_bldc
